remove duplicate models