@@ -4,17 +4,16 @@ import com.restaurant.dto.BookingRequest;
 import com.restaurant.dto.BookingResponse;
 import com.restaurant.model.Booking;
 import com.restaurant.repository.BookingRepository;
-import org.springframework.beans.factory.annotation.Autowired;
+import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
+@RequiredArgsConstructor
 public class BookingService {
 
-    @Autowired
-    private BookingRepository bookingRepository;
+    private final BookingRepository bookingRepository;
 
     public BookingResponse createBooking(BookingRequest bookingRequest) {
         Booking booking = new Booking();
@@ -30,6 +29,6 @@ public class BookingService {
     public List<BookingResponse> getBookingsByTable(String tableId) {
         return bookingRepository.findByTableId(tableId).stream()
                 .map(booking -> new BookingResponse(booking.getId(), booking.getTableId(), booking.getCustomerId(), booking.getBookingTime()))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
